# dayan-yijing

./: .env.example  .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  vercel.json
api/: divine.py  index.py  interpret.py
public/: index.html
src/: dayan.py  hexagrams.py  yao_ci.py
web/: api.py  app.py  llm.py
web/static/: index.html
